java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testAddCastHint3-hints.pass
Cast ...get(...) to String
Change type of s to Object
